# video-gen-inference-blueprint

./: CLAUDE.md  Cargo.toml  Cross.toml  README.md  blueprint.json  rust-toolchain.toml
.githooks/: pre-commit
.github/workflows/: release.yml
contracts/: foundry.toml  remappings.txt
contracts/cache/: solidity-files-cache.json
contracts/src/: VideoGenBSM.sol
contracts/test/: VideoGenBSM.t.sol
deploy/: definition.json
metadata/: blueprint-metadata.json
operator/: Cargo.toml  build.rs
operator/src/: config.rs  health.rs  lib.rs  main.rs  qos.rs  server.rs  video.rs
operator/tests/: e2e.rs  lifecycle.rs
