[workspace]
members = ["operator"]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"
repository = "https://github.com/tangle-network/video-gen-inference-blueprint"

[workspace.dependencies]
blueprint-sdk = { git = "https://github.com/tangle-network/blueprint", branch = "main", features = ["std", "tangle", "macros"] }
alloy = { version = "1", features = ["full", "signer-local", "provider-http"] }
alloy-sol-types = "1"
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
reqwest = { version = "0.12", features = ["json", "stream"] }
anyhow = "1"
thiserror = "2"
hex = "0.4"
k256 = { version = "0.13", features = ["ecdsa"] }
prometheus = "0.13"
futures-util = "0.3"
tokio-stream = "0.1"

# Point blueprint-sdk deps at local checkout (has pre-yank core2 resolved)
# core2 was entirely yanked from crates.io
[patch.crates-io]
core2 = { git = "https://github.com/tangle-network/core2", branch = "master" }

